# Project_RTSP

./: CMakeLists.txt  README.md  runCpp.sh  runPython.sh  testCamera.sh
include/: rtsp_server.h
src/: main.cpp  main.py  rtsp_server.cpp
test/: main.py
